tests/init/neg/enum-desugared.check
-- Error: tests/init/neg/enum-desugared.scala:17:10 --------------------------------------------------------------------
17 |    Array(this.LazyErrorId, this.NoExplanationID) // error
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |          Cannot prove that the value is fully initialized. Only initialized values may be used as arguments.
   |
   |          The unsafe promotion may cause the following problem:
   |          Calling the external method method name may cause initialization errors. Calling trace:
   |          -> Array(this.LazyErrorId, this.NoExplanationID) // error	[ enum-desugared.scala:17 ]
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |          -> override def productPrefix: String = this.name()	[ enum-desugared.scala:29 ]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
